LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/Loyalty_Program_Setup__c.object-meta.xml
<CustomObject>
    <label>Loyalty Program Setup</label>
    <nameField>
        <label>Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Program Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>