LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/fields/Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program__c</fullName>
    <label>Loyalty Program</label>
    <referenceTo>Loyalty_Program__c</referenceTo>
    <relationshipLabel>Loyalty Program Setups</relationshipLabel>
    <relationshipName>Loyalty_Program_Setups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>