LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/fields/Points_Per_Value_Spent__c.field-meta.xml
<CustomField>
    <fullName>Points_Per_Value_Spent__c</fullName>
    <label>Points Per Value Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>