LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/fields/Points_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Points_Validity_Days__c</fullName>
    <label>Points Validity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>