LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/fields/Value_Spent__c.field-meta.xml
<CustomField>
    <fullName>Value_Spent__c</fullName>
    <label>Value Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>