LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/recordTypes/Card_Program_Setup.recordType-meta.xml
<RecordType>
    <fullName>Card_Program_Setup</fullName>
    <active>true</active>
    <label>Card Program Setup</label>
</RecordType>