LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/recordTypes/Hybrid_Program_Setup.recordType-meta.xml
<RecordType>
    <fullName>Hybrid_Program_Setup</fullName>
    <active>true</active>
    <label>Hybrid Program Setup</label>
</RecordType>