LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/recordTypes/Paid_Program_Setup.recordType-meta.xml
<RecordType>
    <fullName>Paid_Program_Setup</fullName>
    <active>true</active>
    <label>Paid Program Setup</label>
</RecordType>