LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/recordTypes/Partnered_Program_Setup.recordType-meta.xml
<RecordType>
    <fullName>Partnered_Program_Setup</fullName>
    <active>true</active>
    <label>Partnered Program Setup</label>
</RecordType>