LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/recordTypes/Point_Program_Setup.recordType-meta.xml
<RecordType>
    <fullName>Point_Program_Setup</fullName>
    <active>true</active>
    <label>Point Program Setup</label>
</RecordType>