LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/recordTypes/Spend_Program_Setup.recordType-meta.xml
<RecordType>
    <fullName>Spend_Program_Setup</fullName>
    <active>true</active>
    <label>Spend Program Setup</label>
</RecordType>