LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/recordTypes/Tiered_Program_Setup.recordType-meta.xml
<RecordType>
    <fullName>Tiered_Program_Setup</fullName>
    <active>true</active>
    <label>Tiered Program Setup</label>
</RecordType>