LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup__c/recordTypes/Value_Program_Setup.recordType-meta.xml
<RecordType>
    <fullName>Value_Program_Setup</fullName>
    <active>true</active>
    <label>Value Program Setup</label>
</RecordType>